# traefik_parser

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: pr-check.yml  release.yml
src/: display.rs  file_reader.rs  log_entry.rs  main.rs  statistics.rs
